--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  image_picker: ^1.1.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.3
+  easy_stepper: ^0.8.5+1
   cloud_firestore: ^5.6.7
   provider: ^6.1.5
 
