--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   easy_stepper: ^0.8.5+1
   cloud_firestore: ^5.6.7
   provider: ^6.1.5
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
