--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  firebase_core: ^3.13.0
+  firebase_core: ^3.15.1
   firebase_auth: ^5.5.3
   easy_stepper: ^0.8.5+1
   cloud_firestore: ^5.6.7
   provider: ^6.1.5
   http: ^1.4.0
+  mailer: ^6.0.1
+  email_validator: ^2.1.17
+  firebase_storage: ^12.4.9
 
 dev_dependencies:
   flutter_test:
