--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   mailer: ^6.0.1
   email_validator: ^2.1.17
   firebase_storage: ^12.4.9
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
